<resources>
    <string name="app_name" translatable="false">TP_AMOV</string>
    <string name="action_settings" translatable="false">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>

    <string name="tvCreateList">Create List</string>
    <string name="tvShowLists">Show Lists</string>
    <string name="tvEditProducts">Edit Products</string>
    <string name="tvEditUnits">Edit Units</string>
    <string name="tvEditCategories">Edit Categories</string>

    <string name="listNew">New List</string>
    <string name="listName">List Name</string>
    <string name="buttonAdd">Add Item</string>
    <string name="buttonCreate">Create Product</string>
    <string name="availableLists">Available Lists:</string>
    <string name="tvItemsInList">Items in list:</string>

    <string name="tvProductCreate">Create a Product</string>
    <string name="tvProductName">Product Name:</string>
    <string name="tvProductBrand">Product Brand:</string>
    <string name="tvProductUnit">Unit</string>
    <string name="tvProductPrice">Price</string>
    <string name="tvProductNotes">Notes</string>
    <string name="tvProductImage">Image</string>
    <string name="tvCreateUnit">Create Unit</string>

    <string name="tvAppName">List Manager</string>
    <string name="tvShowList">Show List</string>
    <string name="tvEditProduct">Edit Products</string>
    <string name="tvEdiUnits">Edit Units</string>

    <string name="tvUnitName">Unit Name:</string>
    <string name="tvUnitSymbol">Unit Symbol:</string>
    <string name="bCreateProduct">Create Product</string>
    <string name="tvCreatedUnits">Created Units:</string>

    <string name="tvlistItems">Items:</string>

    <string name="etMandatory">Mandatory</string>
    <string name="etOptional">Optional</string>
    <string name="bCreateUnit">Create Unit</string>
    <string name="unit_name">Unit Name: </string>
    <string name="Unit_Symbol">Unit Symbol: </string>
    <string name="save">Save</string>
    <string name="tv_criar_categoria">Create Category</string>
    <string name="tv_category_name">Category Name</string>
    <string name="b_create_category">Create Category</string>
    <string name="tv_created_categories">Created Categories</string>
    <string name="rowCategoryName">Category Name</string>
    <string name="saveAndLeave">Save and Exit</string>
    <string name="tv_edit_products">Edit Products</string>
    <string name="b_save_changes">Save Changes</string>
    <string name="tv_edit_product">Edit Product</string>
    <string name="tv_name">Name:</string>
    <string name="tv_brand">Brand:</string>
    <string name="tv_unit">Unit:</string>
    <string name="tv_category">Category:</string>
    <string name="b_Back">Back</string>
    <string name="tv_product">Product:</string>
    <string name="tv_quantity">Quantity:</string>
    <string name="b_save_list">Save List</string>
    <string name="sp_insert_price">Insert Price:</string>
    <string name="b_add_price">Add Price</string>
</resources>