<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/standardBackground"
    tools:context=".Activities.CriarCategoriaActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/PageName"
        android:text="@string/tv_criar_categoria"
        android:layout_marginTop="6sp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextFieldName"
                android:text="@string/tv_category_name"
                android:layout_margin="12sp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/etCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="text"
                android:textAlignment="center"
                android:maxLength="20"
                android:hint="@string/etMandatory"/>
        </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="12sp"
        android:text="@string/b_create_category"
        android:onClick="criaCategoria"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12sp"
            android:text="@string/tv_created_categories"
            android:theme="@style/TextFieldName" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lv_CategoryList"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="12sp"
        android:layout_margin="12sp"
        android:onClick="Save"/>
</LinearLayout>