<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CriarProdutoActivity"
    android:background="#ffffe0"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvProductCreate"
        android:layout_margin="12sp"
        android:theme="@style/PageName"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="12sp"
            android:layout_marginTop="6sp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextFieldName"
                android:text="@string/tvProductName"/>
            <EditText
                android:id="@+id/etProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10sp"
                android:hint="@string/etMandatory"
                android:maxLines="1"
                android:inputType="text"
                android:maxLength="30"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="12sp"
            android:layout_marginTop="6sp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextFieldName"
                android:text="@string/tvProductBrand"/>
            <EditText
                android:id="@+id/etProductBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10sp"
                android:hint="@string/etOptional"
                android:maxLines="1"
                android:inputType="text"
                android:maxLength="30"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>