<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6sp"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/tv_name"
            android:theme="@style/TextFieldName"
            android:id="@+id/row_pq_tvProductName"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/tv_brand"
            android:theme="@style/TextFieldName"
            android:id="@+id/row_pq_tvProductBrand"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_quantity"
            android:theme="@style/TextFieldName"
            android:id="@+id/row_pq_tvProductQuantity"/>
    </LinearLayout>
</LinearLayout>